exports[`metro-serializer-esbuild > adds sourceMappingURL comment 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res, err) => function __init() {",
  "    if (err) throw err[0];",
  "    try {",
  "      return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "    } catch (e) {",
  "      throw err = [e], e;",
  "    }",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // test/__fixtures__/base.ts",
  "  function app() {",
  "    \\"this should _not_ be removed\\";",
  "  }",
  "  var init_base = __esm({",
  "    \\"test/__fixtures__/base.ts\\"() {",
  "      \\"use strict\\";",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/direct.ts",
  "  var direct_exports = {};",
  "  var init_direct = __esm({",
  "    \\"test/__fixtures__/direct.ts\\"() {",
  "      \\"use strict\\";",
  "      init_base();",
  "      app();",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_direct();",
  "})();",
  "//# sourceMappingURL=.test-output.jsbundle.map",
  ""
]
`;

exports[`metro-serializer-esbuild > handles \`sideEffects\` array 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res, err) => function __init() {",
  "    if (err) throw err[0];",
  "    try {",
  "      return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "    } catch (e) {",
  "      throw err = [e], e;",
  "    }",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // ../../node_modules/.store/@fluentui-utilities-virtual-f57421ac4e/package/lib/warn/warn.js",
  "  function warn(message) {",
  "    if (_warningCallback && false) {",
  "      _warningCallback(message);",
  "    } else if (console && console.warn) {",
  "      console.warn(message);",
  "    }",
  "  }",
  "  var _warningCallback;",
  "  var init_warn = __esm({",
  "    \\"../../node_modules/.store/@fluentui-utilities-virtual-f57421ac4e/package/lib/warn/warn.js\\"() {",
  "      \\"use strict\\";",
  "      _warningCallback = void 0;",
  "    }",
  "  });",
  "",
  "  // ../../node_modules/.store/@fluentui-utilities-virtual-f57421ac4e/package/lib/warn.js",
  "  var init_warn2 = __esm({",
  "    \\"../../node_modules/.store/@fluentui-utilities-virtual-f57421ac4e/package/lib/warn.js\\"() {",
  "      \\"use strict\\";",
  "      init_warn();",
  "    }",
  "  });",
  "",
  "  // ../../node_modules/.store/@fluentui-set-version-npm-8.2.24-32250231b1/package/lib/setVersion.js",
  "  function setVersion(packageName, packageVersion) {",
  "    if (typeof _win !== \\"undefined\\") {",
  "      var packages = _win.__packages__ = _win.__packages__ || {};",
  "      if (!packages[packageName] || !packagesCache[packageName]) {",
  "        packagesCache[packageName] = packageVersion;",
  "        var versions = packages[packageName] = packages[packageName] || [];",
  "        versions.push(packageVersion);",
  "      }",
  "    }",
  "  }",
  "  var packagesCache, _win;",
  "  var init_setVersion = __esm({",
  "    \\"../../node_modules/.store/@fluentui-set-version-npm-8.2.24-32250231b1/package/lib/setVersion.js\\"() {",
  "      \\"use strict\\";",
  "      packagesCache = {};",
  "      _win = void 0;",
  "      try {",
  "        _win = window;",
  "      } catch (e) {",
  "      }",
  "    }",
  "  });",
  "",
  "  // ../../node_modules/.store/@fluentui-set-version-npm-8.2.24-32250231b1/package/lib/index.js",
  "  var init_lib = __esm({",
  "    \\"../../node_modules/.store/@fluentui-set-version-npm-8.2.24-32250231b1/package/lib/index.js\\"() {",
  "      \\"use strict\\";",
  "      init_setVersion();",
  "      setVersion(\\"@fluentui/set-version\\", \\"6.0.0\\");",
  "    }",
  "  });",
  "",
  "  // ../../node_modules/.store/@fluentui-utilities-virtual-f57421ac4e/package/lib/version.js",
  "  var init_version = __esm({",
  "    \\"../../node_modules/.store/@fluentui-utilities-virtual-f57421ac4e/package/lib/version.js\\"() {",
  "      \\"use strict\\";",
  "      init_lib();",
  "      setVersion(\\"@fluentui/utilities\\", \\"8.17.2\\");",
  "    }",
  "  });",
  "",
  "  // ../../node_modules/.store/@fluentui-utilities-virtual-f57421ac4e/package/lib/index.js",
  "  var init_lib2 = __esm({",
  "    \\"../../node_modules/.store/@fluentui-utilities-virtual-f57421ac4e/package/lib/index.js\\"() {",
  "      \\"use strict\\";",
  "      init_warn2();",
  "      init_version();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/sideEffectsArray.ts",
  "  var sideEffectsArray_exports = {};",
  "  var init_sideEffectsArray = __esm({",
  "    \\"test/__fixtures__/sideEffectsArray.ts\\"() {",
  "      \\"use strict\\";",
  "      init_lib2();",
  "      warn(\\"this should _not_ be removed\\");",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_sideEffectsArray();",
  "})();",
  ""
]
`;

exports[`metro-serializer-esbuild > preserves template literals 1`] = `
[
  "(() => {",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __commonJS = (cb, mod) => function __require() {",
  "    try {",
  "      return mod || (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod), mod.exports;",
  "    } catch (e) {",
  "      throw mod = 0, e;",
  "    }",
  "  };",
  "",
  "  // test/__fixtures__/templateLiterals.ts",
  "  var require_templateLiterals = __commonJS({",
  "    \\"test/__fixtures__/templateLiterals.ts\\"() {",
  "      console.log\`Hello\`;",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  require_templateLiterals();",
  "})();",
  ""
]
`;

exports[`metro-serializer-esbuild > removes unused code (export *) 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res, err) => function __init() {",
  "    if (err) throw err[0];",
  "    try {",
  "      return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "    } catch (e) {",
  "      throw err = [e], e;",
  "    }",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // test/__fixtures__/base.ts",
  "  function app() {",
  "    \\"this should _not_ be removed\\";",
  "  }",
  "  var init_base = __esm({",
  "    \\"test/__fixtures__/base.ts\\"() {",
  "      \\"use strict\\";",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/exportAllPublic.ts",
  "  var init_exportAllPublic = __esm({",
  "    \\"test/__fixtures__/exportAllPublic.ts\\"() {",
  "      \\"use strict\\";",
  "      init_base();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/exportAll.ts",
  "  var exportAll_exports = {};",
  "  var init_exportAll = __esm({",
  "    \\"test/__fixtures__/exportAll.ts\\"() {",
  "      \\"use strict\\";",
  "      init_exportAllPublic();",
  "      app();",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_exportAll();",
  "})();",
  ""
]
`;

exports[`metro-serializer-esbuild > removes unused code (import * <- export *) 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res, err) => function __init() {",
  "    if (err) throw err[0];",
  "    try {",
  "      return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "    } catch (e) {",
  "      throw err = [e], e;",
  "    }",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // test/__fixtures__/base.ts",
  "  function app() {",
  "    \\"this should _not_ be removed\\";",
  "  }",
  "  var init_base = __esm({",
  "    \\"test/__fixtures__/base.ts\\"() {",
  "      \\"use strict\\";",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/exportAllPublic.ts",
  "  var init_exportAllPublic = __esm({",
  "    \\"test/__fixtures__/exportAllPublic.ts\\"() {",
  "      \\"use strict\\";",
  "      init_base();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/nestedExportAllInternal.ts",
  "  var init_nestedExportAllInternal = __esm({",
  "    \\"test/__fixtures__/nestedExportAllInternal.ts\\"() {",
  "      \\"use strict\\";",
  "      init_exportAllPublic();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/importExportAll.ts",
  "  var importExportAll_exports = {};",
  "  var init_importExportAll = __esm({",
  "    \\"test/__fixtures__/importExportAll.ts\\"() {",
  "      \\"use strict\\";",
  "      init_nestedExportAllInternal();",
  "      app();",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_importExportAll();",
  "})();",
  ""
]
`;

exports[`metro-serializer-esbuild > removes unused code (import *) 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res, err) => function __init() {",
  "    if (err) throw err[0];",
  "    try {",
  "      return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "    } catch (e) {",
  "      throw err = [e], e;",
  "    }",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // test/__fixtures__/base.ts",
  "  function app() {",
  "    \\"this should _not_ be removed\\";",
  "  }",
  "  var init_base = __esm({",
  "    \\"test/__fixtures__/base.ts\\"() {",
  "      \\"use strict\\";",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/importAll.ts",
  "  var importAll_exports = {};",
  "  var init_importAll = __esm({",
  "    \\"test/__fixtures__/importAll.ts\\"() {",
  "      \\"use strict\\";",
  "      init_base();",
  "      app();",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_importAll();",
  "})();",
  ""
]
`;

exports[`metro-serializer-esbuild > removes unused code (nested export *) 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res, err) => function __init() {",
  "    if (err) throw err[0];",
  "    try {",
  "      return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "    } catch (e) {",
  "      throw err = [e], e;",
  "    }",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // test/__fixtures__/base.ts",
  "  function app() {",
  "    \\"this should _not_ be removed\\";",
  "  }",
  "  var init_base = __esm({",
  "    \\"test/__fixtures__/base.ts\\"() {",
  "      \\"use strict\\";",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/exportAllPublic.ts",
  "  var init_exportAllPublic = __esm({",
  "    \\"test/__fixtures__/exportAllPublic.ts\\"() {",
  "      \\"use strict\\";",
  "      init_base();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/nestedExportAllInternal.ts",
  "  var init_nestedExportAllInternal = __esm({",
  "    \\"test/__fixtures__/nestedExportAllInternal.ts\\"() {",
  "      \\"use strict\\";",
  "      init_exportAllPublic();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/nestedExportAllPublic.ts",
  "  var init_nestedExportAllPublic = __esm({",
  "    \\"test/__fixtures__/nestedExportAllPublic.ts\\"() {",
  "      \\"use strict\\";",
  "      init_nestedExportAllInternal();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/nestedExportAll.ts",
  "  var nestedExportAll_exports = {};",
  "  var init_nestedExportAll = __esm({",
  "    \\"test/__fixtures__/nestedExportAll.ts\\"() {",
  "      \\"use strict\\";",
  "      init_nestedExportAllPublic();",
  "      app();",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_nestedExportAll();",
  "})();",
  ""
]
`;

exports[`metro-serializer-esbuild > removes unused code 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res, err) => function __init() {",
  "    if (err) throw err[0];",
  "    try {",
  "      return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "    } catch (e) {",
  "      throw err = [e], e;",
  "    }",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // test/__fixtures__/base.ts",
  "  function app() {",
  "    \\"this should _not_ be removed\\";",
  "  }",
  "  var init_base = __esm({",
  "    \\"test/__fixtures__/base.ts\\"() {",
  "      \\"use strict\\";",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/direct.ts",
  "  var direct_exports = {};",
  "  var init_direct = __esm({",
  "    \\"test/__fixtures__/direct.ts\\"() {",
  "      \\"use strict\\";",
  "      init_base();",
  "      app();",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_direct();",
  "})();",
  ""
]
`;

exports[`metro-serializer-esbuild > tree-shakes lodash-es 1`] = `
[
  "(() => {",
  "  var __defProp = Object.defineProperty;",
  "  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;",
  "  var __getOwnPropNames = Object.getOwnPropertyNames;",
  "  var __hasOwnProp = Object.prototype.hasOwnProperty;",
  "  var __esm = (fn, res, err) => function __init() {",
  "    if (err) throw err[0];",
  "    try {",
  "      return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;",
  "    } catch (e) {",
  "      throw err = [e], e;",
  "    }",
  "  };",
  "  var __copyProps = (to, from, except, desc) => {",
  "    if (from && typeof from === \\"object\\" || typeof from === \\"function\\")",
  "      for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {",
  "        key = keys[i];",
  "        if (!__hasOwnProp.call(to, key) && key !== except)",
  "          __defProp(to, key, { get: ((k) => from[k]).bind(null, key), enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });",
  "      }",
  "    return to;",
  "  };",
  "  var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);",
  "",
  "  // ../../node_modules/.store/lodash-es-npm-4.18.1-02cf41b912/package/head.js",
  "  function head(array) {",
  "    return array && array.length ? array[0] : void 0;",
  "  }",
  "  var head_default;",
  "  var init_head = __esm({",
  "    \\"../../node_modules/.store/lodash-es-npm-4.18.1-02cf41b912/package/head.js\\"() {",
  "      \\"use strict\\";",
  "      head_default = head;",
  "    }",
  "  });",
  "",
  "  // ../../node_modules/.store/lodash-es-npm-4.18.1-02cf41b912/package/lodash.js",
  "  var init_lodash = __esm({",
  "    \\"../../node_modules/.store/lodash-es-npm-4.18.1-02cf41b912/package/lodash.js\\"() {",
  "      \\"use strict\\";",
  "      init_head();",
  "    }",
  "  });",
  "",
  "  // test/__fixtures__/lodash-es.ts",
  "  var lodash_es_exports = {};",
  "  var init_lodash_es = __esm({",
  "    \\"test/__fixtures__/lodash-es.ts\\"() {",
  "      \\"use strict\\";",
  "      init_lodash();",
  "      console.log(head_default([]));",
  "    }",
  "  });",
  "",
  "  // virtual:metro:__rnx_prelude__",
  "  global = typeof globalThis !== \\"undefined\\" ? globalThis : typeof global !== \\"undefined\\" ? global : typeof window !== \\"undefined\\" ? window : new Function(\\"return this;\\")();",
  "  init_lodash_es();",
  "})();",
  ""
]
`;
